# FreeDS

./: .pre-commit-config.yaml  FreeDS.code-workspace  README.md  pyproject.toml
docs/: setup.md
src/freeds/cli/: cli.py
src/freeds/cli/commands/: dc.py  nb.py  stack.py
src/freeds/cli/helpers/: stackrunner.py
src/freeds/cli/setup/: main.py  setup_credentials.py  setup_directory.py  setup_docker.py  utils.py
src/freeds/config/: __init__.py  config.py
src/freeds/config/environment/: envvar.py
src/freeds/config/file/: config_classes.py  config_file.py
src/freeds/notebooks/300.spark/: a.spark_plain.ipynb  b.spark_iceberg.ipynb
src/freeds/selfcheck/: airflow_checks.py  directory_checks.py  notebook_checks.py
src/freeds/setup/: setup_directory.py
src/freeds/utils/: __init__.py  log.py  notebook.py  root_config.py  stackrunner.py
src/tfds/: cli.py
src/tfds/commands/: cfg.py  dc.py
src/tfds/config/: config.py
src/tfds/config_api/: __init__.py  config_api.py
src/tfds/config_file/: __init__.py  config_file.py
src/tfds/s3/: s3.py
src/tfds/spark/: spark.py
src/tfds/utils/: config.py
src/tfds_cli/: cli.py
src/tfds_cli/commands/: dc.py  nb.py  selfcheck.py  stack.py
src/tfds_cli/notebooks/: 100.template.ipynb
src/tfds_cli/notebooks/300.spark/: a.spark_plain.ipynb  b.spark_delta.ipynb
src/tfds_cli/selfcheck/: airflow_checks.py  checks.py  directory_checks.py  docker_checks.py  network_checks.py  notebook_checks.py  notebook_runner.py  plugin.py  s3_checks.py
src/tfds_cli/utils/: __init__.py  notebook.py  stack.py  stackrunner.py  stackutils.py
tests/: test_config.py  test_config_api.py  test_config_file.py  test_dc.py  test_nb.py  test_notebook.py  test_s3.py  test_spark.py  test_stackrunner.py  test_stacks.py  test_utils.py
